--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-white flex items-center justify-center h-screen">
-    <div class="bg-white p-12 rounded shadow-md w-3/4 max-w-2xl"> <h1 class="text-3xl font-semibold mb-6 text-center">Upload File</h1> <form id="uploadForm" action="/upload" method="post" encType="multipart/form-data">
-            <input type="file" name="file" class="mb-6 block w-full text-sm text-slate-500 file:mr-4 file:py-3 file:px-6 file:rounded-full file:border-0 file:text-sm file:font-semibold file:bg-indigo-500 file:text-white hover:file:bg-indigo-700" /> <div class="flex justify-center">
-                <button type="submit" id="uploadButton" class="bg-indigo-500 hover:bg-indigo-700 text-white font-bold py-3 px-6 rounded text-lg"> Upload File
+    <div class="bg-white p-12 rounded shadow-md w-3/4 max-w-2xl">
+        <h1 class="text-3xl font-semibold mb-6 text-center">Upload File</h1>
+        <form id="uploadForm" action="/upload" method="post" encType="multipart/form-data">
+            <div class="mb-6">
+                <input type="file" name="file" class="block w-full text-sm text-slate-500 file:mr-4 file:py-4 file:px-8 file:rounded-lg file:border-0 file:text-lg file:font-semibold file:bg-indigo-500 file:text-white hover:file:bg-indigo-700" />
+            </div>
+            <div class="flex justify-center">
+                <button type="submit" id="uploadButton" class="bg-indigo-500 hover:bg-indigo-700 text-white font-bold py-3 px-6 rounded text-lg">
+                    Upload File
                 </button>
                 <div id="loadingIndicator" class="ml-2 hidden">
                     <svg class="animate-spin h-6 w-6 text-indigo-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
