--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 </head>
 <body class="bg-white flex items-center justify-center h-screen">
     <div class="bg-white p-12 rounded shadow-md w-3/4 max-w-2xl">
-        <h1 class="text-3xl font-semibold mb-6 text-center">Upload File</h1>
+        <h1 class="text-4xl font-semibold mb-8 text-center">Upload File</h1>
         <form id="uploadForm" action="/upload" method="post" encType="multipart/form-data">
-            <div class="mb-6">
-                <input type="file" name="file" class="block w-full text-sm text-slate-500 file:mr-4 file:py-4 file:px-8 file:rounded-lg file:border-0 file:text-lg file:font-semibold file:bg-indigo-500 file:text-white hover:file:bg-indigo-700" />
+            <div class="mb-8">
+                <input type="file" name="file" class="block w-full text-lg text-slate-500 file:mr-4 file:py-5 file:px-10 file:rounded-lg file:border-0 file:text-xl file:font-semibold file:bg-indigo-500 file:text-white hover:file:bg-indigo-700" />
             </div>
             <div class="flex justify-center">
-                <button type="submit" id="uploadButton" class="bg-indigo-500 hover:bg-indigo-700 text-white font-bold py-3 px-6 rounded text-lg">
+                <button type="submit" id="uploadButton" class="bg-indigo-500 hover:bg-indigo-700 text-white font-bold py-4 px-8 rounded text-xl">
                     Upload File
                 </button>
                 <div id="loadingIndicator" class="ml-2 hidden">
-                    <svg class="animate-spin h-6 w-6 text-indigo-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                    <svg class="animate-spin h-8 w-8 text-indigo-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
                         <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
                         <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
                     </svg>
