--- a/index.html
+++ b/index.html
@@ -3,6 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Upload File by Rapikz</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.1.2/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="https://i.pinimg.com/736x/0d/71/2a/0d712a0b6805c0b44386339048bdfce5.jpg?format=png&name=900x900">
+</head>
+    <p align="center">
+      <img src="https://media.tenor.com/yWaLIc5J9WgAAAAj/momoi.gif" width="30%" height="30%" />
+    </p>
+<body class="bg-gray-100 p-6">
+    <div class="max-w-lg mx-auto bg-white p-6 rounded-lg shadow-lg">
+        <h1 class="text-3xl font-semibold text-center text-gray-800 mb-6">Upload File to GitHub by Rapikz</h1>
+        <form id="uploadForm" action="/upload" method="post" encType="multipart/form-data" class="space-y-4">
+            <div>
+                <label for="file" class="block text-gray-600 font-medium">Choose file</label>
+                <input type="file" name="file" id="file" class="mt-2 p-2 border border-gray-300 rounded-md w-full" />
+            </div>
+            <button type="submit" class="w-full bg-blue-500 text-white py-2 rounded-md hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-400">
+                Upload File
+            </button>
+            <!-- Loading spinner, hidden initially -->
+            <div id="loading" class="hidden text-center mt-4">
+                <svg role="status" class="inline w-8 h-8 text-gray-200 animate-spin dark:text-gray-600 fill-blue-600" viewBox="0 0 100 101" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <path d="M99 50.5C99 78.2 77.7 100 50 100C22.3 100 1 78.2 1 50.5C1 22.8 22.3 1 50 1C77.7 1 99 22.8 99 50.5ZM10 50.5C10 73.4 27.6 91.9 50 91.9C72.4 91.9 90 73.4 90 50.5C90 27.6 72.4 9.1 50 9.1C27.6 9.1 10 27.6 10 50.5ZM91 50.5C91 70.6 72.4 89.1 50 89.1C27.6 89.1 10 70.6 10 50.5C10 30.4 27.6 11.9 50 11.9C72.4 11.9 91 30.4 91 50.5Z" />
+                </svg>
+                <p class="text-gray-600 mt-2">Uploading...</p>
+            </div>
+        </form>
+    </div>
+
+    <script>
+        const form = document.getElementById('uploadForm');
+        const loading = document.getElementById('loading');
+
+        form.addEventListener('submit', function(event) {
+            // Show the loading spinner when the form is submitted
+            loading.classList.remove('hidden');
+        });
+    </script>
+    <p align="center">
+      <img src="https://raw.githubusercontent.com/upload-file-lab/fileupload/main/uploads/1741012702447.png" width="20%" height="20%" />
+    </p>
+    <p align="center">
+    <a href="https://t.me/rapikz"><img
+        src="https://img.shields.io/badge/Telegram-00FFFF?style=for-the-badge&logo=telegram&logoColor=white"
+        alt="Telegram"></a>
+        </p>
+    <p align="center">
+    <a href="https://github.com/Rapikz-kwontwol"><img title="Author"
+        src="https://img.shields.io/badge/GITHUB-gray.svg?style=for-the-badge&logo=github"
+        alt="GitHub"></a>
+        </p>
+    <p align="center">
+    <a href="https://whatsapp.com/channel/0029VaoJb11LikgEpNpBty0e"><img
+        src="https://img.shields.io/badge/WhatsApp Channel-25D366?style=for-the-badge&logo=whatsapp&logoColor=white&link=https://whatsapp.com/channel/0029VaoJb11LikgEpNpBty0e"
+        alt="WhatsApp"></a>
+        </p>
+</body>
+</html>
+<!---
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upload File</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -38,3 +101,4 @@
     </script>
 </body>
 </html>
+--->
