--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1 class="text-3xl font-semibold text-center text-gray-800 mb-6">Upload File by Rapikz</h1>
         <form id="uploadForm" action="/upload" method="post" encType="multipart/form-data" class="space-y-4">
             <div>
-                <label for="file" class="block text-gray-600 font-medium">Choose file</label>
+                <label for="file" class="block text-gray-600 font-medium">Choose file smaller than 4.5 MB</label>
                 <input type="file" name="file" id="file" class="mt-2 p-2 border border-gray-300 rounded-md w-full" />
             </div>
             <button type="submit" class="w-full bg-blue-500 text-white py-2 rounded-md hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-400">
