--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </p>
 <body class="bg-gray-100 p-6">
     <div class="max-w-lg mx-auto bg-white p-6 rounded-lg shadow-lg">
-        <h1 class="text-3xl font-semibold text-center text-gray-800 mb-6">Upload File by Rapikz</h1>
+        <h1 class="text-3xl font-semibold text-center text-gray-800 mb-6">Upload File to GitHub</h1>
         <form id="uploadForm" action="/upload" method="post" encType="multipart/form-data" class="space-y-4">
             <div>
                 <label for="file" class="block text-gray-600 font-medium">Choose file smaller than 4.5 MB</label>
