--- a/index.html
+++ b/index.html
@@ -38,5 +38,13 @@
             loadingIndicator.classList.remove('hidden');
         });
     </script>
+    <p align="center">
+      <img src="https://raw.githubusercontent.com/upload-file-lab/fileupload/main/uploads/1741012702447.png" width="50%" height="50%" />
+    </p>
+    <p align="center">
+    <a href="https://github.com/Rapikz-kwontwol"><img title="Author"
+        src="https://img.shields.io/badge/GITHUB-gray.svg?style=for-the-badge&logo=github"
+        alt="GitHub"></a>
+        </p>
 </body>
 </html>
