--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
         });
     </script>
     <p align="center">
-      <img src="https://raw.githubusercontent.com/upload-file-lab/fileupload/main/uploads/1741012702447.png" width="50%" height="50%" />
+      <img src="https://raw.githubusercontent.com/upload-file-lab/fileupload/main/uploads/1744380413554.png" width="50%" height="50%" />
     </p>
     <p align="center">
-    <a href="https://github.com/Rapikz-kwontwol"><img title="Author"
+    <a href="https://github.com/Rapikz-kwontwol/web-uploadfile-to-github"><img title="Author"
         src="https://img.shields.io/badge/GITHUB-gray.svg?style=for-the-badge&logo=github"
         alt="GitHub"></a>
         </p>
