--- a/index.html
+++ b/index.html
@@ -6,94 +6,13 @@
     <title>Upload File GH</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="icon" type="image/x-icon" href="https://i.pinimg.com/736x/0d/71/2a/0d712a0b6805c0b44386339048bdfce5.jpg?format=png&name=900x900">
-    <style>
-        body {
-            font-family: sans-serif;
-            margin: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            background-color: #f3f4f6;
-        }
-        .container {
-            background-color: #ffffff;
-            padding: 2rem;
-            border-radius: 0.5rem;
-            box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px -5px rgba(0, 0, 0, 0.1);
-            width: 90%;
-            max-width: 400px;
-            text-align: center;
-        }
-        h1 {
-            font-size: 1.5rem;
-            font-weight: 600;
-            margin-bottom: 1rem;
-            color: #374151;
-        }
-        input[type="file"] {
-            margin-bottom: 1rem;
-            display: block;
-            width: 100%;
-            padding: 0.5rem;
-            font-size: 0.875rem;
-            line-height: 1.25rem;
-            color: #4b5563;
-            border: 1px solid #d1d5db;
-            border-radius: 0.375rem;
-        }
-        button[type="submit"] {
-            background-color: #6366f1;
-            color: #ffffff;
-            font-weight: 700;
-            padding: 0.5rem 1rem;
-            border-radius: 0.375rem;
-            border: none;
-            cursor: pointer;
-            transition: background-color 0.2s ease-in-out;
-        }
-        button[type="submit"]:hover {
-            background-color: #4f46e5;
-        }
-        .loading-indicator {
-            margin-left: 0.5rem;
-            display: none;
-        }
-        .loading-indicator svg {
-            animation: spin 2s linear infinite;
-            height: 1.25rem;
-            width: 1.25rem;
-            color: #6366f1;
-        }
-        @keyframes spin {
-            to { transform: rotate(360deg); }
-        }
-        .image-container {
-            margin-top: 1rem;
-        }
-        .image-container img {
-            max-width: 100%;
-            height: auto;
-        }
-        .github-link {
-            margin-top: 1rem;
-        }
-        audio {
-            position: fixed;
-            bottom: 20px;
-            left: 20px;
-            width: 300px;
-            z-index: 1000; /* Pastikan audio player berada di atas elemen lain */
-        }
-    </style>
 </head>
-<body>
+<body class="bg-gray-100 flex flex-col items-center justify-center h-screen">
     <p align="center">
-        <img src="https://media.tenor.com/yWaLIc5J9WgAAAAj/momoi.gif" width="200" height="200" alt="Momoi GIF" />
+        <img src="https://media.tenor.com/yWaLIc5J9WgAAAAj/momoi.gif" width="100%" height="100%" />
     </p>
-    <div class="container">
-        <h1>Upload file yang lebih kecil dari 4.5 MB</h1>
+    <div class="bg-white p-8 rounded shadow-md w-96">
+        <h1 class="text-2xl font-semibold mb-4">Upload file yang lebih kecil dari 4.5 MB</h1>
         <form ref="uploadForm" id="uploadForm" action="/upload" method="post" encType="multipart/form-data">
             <input type="file" name="file" class="mb-4 block w-full text-sm text-slate-500 file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0 file:text-sm file:font-semibold file:bg-indigo-500 file:text-white hover:file:bg-indigo-700" />
             <div class="flex justify-center">
@@ -109,20 +28,6 @@
             </div>
         </form>
     </div>
-    <div class="image-container">
-        <img src="https://raw.githubusercontent.com/upload-file-lab/fileupload/main/uploads/1744380557588.png" width="250" height="250" alt="Uploaded Image" />
-    </div>
-    <div class="github-link">
-        <a href="https://github.com/Rapikz-kwontwol/web-uploadfile-to-github"><img title="Author"
-            src="https://img.shields.io/badge/GITHUB-gray.svg?style=for-the-badge&logo=github"
-            alt="GitHub"></a>
-    </div>
-
-    <audio controls autoplay loop style="display: none;">
-        <source src="https://files.catbox.moe/ar2c1c.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>
-
     <script>
         const uploadForm = document.getElementById('uploadForm');
         const uploadButton = document.getElementById('uploadButton');
@@ -133,5 +38,14 @@
             loadingIndicator.classList.remove('hidden');
         });
     </script>
+    <center><audio autoplay="autoplay" controls="controls" src="https://files.catbox.moe/ar2c1c.mp3"></audio></a></center>
+    <p align="center">
+      <img src="https://raw.githubusercontent.com/upload-file-lab/fileupload/main/uploads/1744380557588.png" width="50%" height="50%" />
+    </p>
+    <p align="center">
+    <a href="https://github.com/Rapikz-kwontwol/web-uploadfile-to-github"><img title="Author"
+        src="https://img.shields.io/badge/GITHUB-gray.svg?style=for-the-badge&logo=github"
+        alt="GitHub"></a>
+        </p>
 </body>
 </html>
