--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </p>
     <div class="bg-white p-8 rounded shadow-md w-96">
         <h1 class="text-2xl font-semibold mb-4">Upload file yang lebih kecil dari 4.5 MB</h1>
-        <form ref="uploadForm" id="uploadForm" action="/upload" method="post" encType="multipart/form-data">
+        <form ref="uploadForm" id="uploadForm" action="/uploadfile" method="post" encType="multipart/form-data">
             <input type="file" name="file" class="mb-4 block w-full text-sm text-slate-500 file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0 file:text-sm file:font-semibold file:bg-indigo-500 file:text-white hover:file:bg-indigo-700" />
             <div class="flex justify-center">
                 <button type="submit" id="uploadButton" class="bg-indigo-500 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded">
