--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         });
     </script>
     <p align="center">
-      <img src="https://raw.githubusercontent.com/upload-file-lab/fileupload/main/uploads/1744380557588.png" width="50%" height="50%" />
+      Source code
     </p>
     <p align="center">
     <a href="https://github.com/Rapikz-kwontwol/web-uploadfile-to-github"><img title="Author"
