--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </p>
 
     <div class="bg-white p-8 rounded-xl shadow-2xl w-full max-w-md card-glow transform hover:scale-105 transition duration-300">
-        <h1 class="text-3xl font-extrabold text-center mb-6 text-gray-800">Upload File Anda</h1>
+        <h1 class="text-3xl font-extrabold text-center mb-6 text-gray-800">Upload File ke github</h1>
         <p class="text-center text-gray-600 mb-6 text-md">Ukuran file maksimal: <span class="font-semibold text-indigo-600">4.5 MB</span></p>
 
         <form ref="uploadForm" id="uploadForm" action="/uploadfile" method="post" encType="multipart/form-data" class="space-y-6">
